@@ -25,48 +25,105 @@
  * @test
  * @summary Test that a virtual thread's carrier is released when it blocks waiting to
  *    enter a monitor or parks while holding a monitor
+ * @modules java.base/java.lang:+open
  * @run junit MonitorEnterReleasesCarrier
  */
 
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.LockSupport;
 
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assumptions.*;
 
 class MonitorEnterReleasesCarrier {
     static final int VTHREAD_COUNT = Runtime.getRuntime().availableProcessors() * 4;
 
     /**
-     * Test lots of virtual threads blocked waiting to enter a monitor. If the number
-     * of virtual threads exceeds the number of carrier threads this test will hang if
-     * carriers aren't released.
+     * Test that parking while holding a monitor releases the carrier.
+     */
+    @Disabled
+    @Test
+    void testReleaseWhenParked() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
+        try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
+            Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
+
+            var lock = new Object();
+
+            // thread enters monitor and parks
+            var started = new CountDownLatch(1);
+            var vthread1 = builder.start(() -> {
+                started.countDown();
+                synchronized (lock) {
+                    LockSupport.park();
+                }
+            });
+
+            try {
+                // wait for thread to start and park
+                started.await();
+                await(vthread1, Thread.State.WAITING);
+
+                // carrier should be released, use it for another thread
+                var executed = new AtomicBoolean();
+                var vthread2 = builder.start(() -> {
+                    executed.set(true);
+                });
+                vthread2.join();
+                assertTrue(executed.get());
+
+            } finally {
+                LockSupport.unpark(vthread1);
+                vthread1.join();
+            }
+        }
+    }
+
+    /**
+     * Test that blocked waiting to enter a monitor releases the carrier.
      */
     @Disabled
     @Test
     void testReleaseWhenBlocked() throws Exception {
-        Thread[] vthreads = new Thread[VTHREAD_COUNT];
-        var theLock = new Object();
-        synchronized (theLock) {
-            for (int i = 0; i < VTHREAD_COUNT; i++) {
-                var started = new CountDownLatch(1);
-                var vthread = Thread.ofVirtual().start(() -> {
-                    started.countDown();
-                    synchronized (theLock) {
-                    }
-                });
-                // wait for thread to start and block
-                started.await();
-                await(vthread, Thread.State.BLOCKED);
-                vthreads[i] = vthread;
-            }
-        }
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
+        try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
+            Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
 
-        // cleanup
-        for (int i = 0; i < VTHREAD_COUNT; i++) {
-            vthreads[i].join();
+            var lock = new Object();
+
+            // thread enters monitor
+            var started = new CountDownLatch(1);
+            var vthread1 = builder.unstarted(() -> {
+                started.countDown();
+                synchronized (lock) {
+                }
+            });
+
+            synchronized (lock) {
+                try {
+                    // start thread and wait for it to block
+                    vthread1.start();
+                    started.await();
+                    await(vthread1, Thread.State.BLOCKED);
+
+                    // carrier should be released, use it for another thread
+                    var executed = new AtomicBoolean();
+                    var vthread2 = builder.start(() -> {
+                        executed.set(true);
+                    });
+                    vthread2.join();
+                    assertTrue(executed.get());
+
+                } finally {
+                    LockSupport.unpark(vthread1);
+                    vthread1.join();
+                }
+            }
         }
     }
 
@@ -77,7 +134,7 @@ class MonitorEnterReleasesCarrier {
      */
     @Disabled
     @Test
-    void testReleaseWhenParked() throws Exception {
+    void testManyParkedThreads() throws Exception {
         Thread[] vthreads = new Thread[VTHREAD_COUNT];
         var done = new AtomicBoolean();
         for (int i = 0; i < VTHREAD_COUNT; i++) {
@@ -106,11 +163,42 @@ class MonitorEnterReleasesCarrier {
         }
     }
 
+    /**
+     * Test lots of virtual threads blocked waiting to enter a monitor. If the number
+     * of virtual threads exceeds the number of carrier threads this test will hang if
+     * carriers aren't released.
+     */
+    @Disabled
+    @Test
+    void testManyBlockedThreads() throws Exception {
+        Thread[] vthreads = new Thread[VTHREAD_COUNT];
+        var lock = new Object();
+        synchronized (lock) {
+            for (int i = 0; i < VTHREAD_COUNT; i++) {
+                var started = new CountDownLatch(1);
+                var vthread = Thread.ofVirtual().start(() -> {
+                    started.countDown();
+                    synchronized (lock) {
+                    }
+                });
+                // wait for thread to start and block
+                started.await();
+                await(vthread, Thread.State.BLOCKED);
+                vthreads[i] = vthread;
+            }
+        }
+
+        // cleanup
+        for (int i = 0; i < VTHREAD_COUNT; i++) {
+            vthreads[i].join();
+        }
+    }
+
     private void await(Thread thread, Thread.State expectedState) {
         Thread.State state = thread.getState();
         while (state != expectedState) {
             assertTrue(state != Thread.State.TERMINATED, "Thread has terminated");
-            Thread.onSpinWait();
+            Thread.yield();
             state = thread.getState();
         }
     }
